--- a/DemoBlazor/Components/Layout/NavMenu.razor
+++ b/DemoBlazor/Components/Layout/NavMenu.razor
@@ -27,8 +27,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Converter
+            <NavLink class="nav-link" href="todo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Todo
             </NavLink>
         </div>
     </nav>
